--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Bagchk - Secure Luggage Storage in Chicago</title>
+    <title>BagChk2.0 - Secure Luggage Storage in Chicago</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
@@ -36,13 +36,13 @@
         }
 
         .hero-image {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/bagchk/background.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/background.jpg');
             background-size: cover;
             background-position: center;
         }
 
         [data-theme="dark"] .hero-image {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/bagchk/background.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/background.jpg');
         }
 
         h1, h2, h3 {
@@ -139,10 +139,10 @@
 
         @media (max-width: 480px) {
             .hero-image {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/bagchk/background-mobile.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/background-mobile.jpg');
             }
             [data-theme="dark"] .hero-image {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/bagchk/background-mobile.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/background-mobile.jpg');
             }
         }
 
@@ -192,9 +192,9 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <a href="#home">
-                                        <a href="index.html"><img src="/bagchk/logo.jpg" alt="Bagchk Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
+                                        <a href="index.html"><img src="/BagChk2.0/logo.jpg" alt="BagChk2.0 Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
 
-<!--                     <img src="/bagchk/logo.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+<!--                     <img src="/BagChk2.0/logo.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     </a> -->
                 </div>
                 <div class="flex items-center space-x-3">
@@ -213,7 +213,7 @@
                     <a href="#home" class="text-[var(--text)] hover:text-[var(--primary)] px-2 py-2 rounded-md transition-colors">Home</a>
                     <a href="#services" class="text-[var(--text)] hover:text-[var(--primary)] px-2 py-2 rounded-md transition-colors">Services</a>
                <a href="#contact" class="text-[var(--text)] hover:text-[var(--primary)] px-2 py-2 rounded-md transition-colors">Contact</a>
-                    <a href="/bagchk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a> 
+                    <a href="/BagChk2.0/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a> 
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
     <section id="home" class="hero-image min-h-[60vh] sm:min-h-[70vh] flex items-center justify-center text-center text-white">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago</h1>
-                    <a href="/bagchk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
+                    <a href="/BagChk2.0/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
         </div>
     </section>
 
@@ -232,22 +232,22 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Our Services</h2>
 
-            <p class="text-center mb-6 sm:mb-8 max-w-3xl mx-auto text-[var(--text-light)]">Bagchk is a cutting-edge app platform revolutionizing luggage storage in Chicago. We seamlessly connect travelers with secure, affordable, and convenient storage options, so you can explore the city hands-free—no matter how long your adventure lasts.</p>
+            <p class="text-center mb-6 sm:mb-8 max-w-3xl mx-auto text-[var(--text-light)]">BagChk2.0 is a cutting-edge app platform revolutionizing luggage storage in Chicago. We seamlessly connect travelers with secure, affordable, and convenient storage options, so you can explore the city hands-free—no matter how long your adventure lasts.</p>
             
             <!-- Service Options -->
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/bagchk/sports.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <img src="/BagChk2.0/sports.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold mb-3">Short-Term Storage</h3>
                     <p class="text-[var(--text-light)]">Perfect for a few hours of sightseeing. Drop off your bags at any of our downtown Chicago locations and enjoy the city hassle-free.</p>
                 </div>
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/bagchk/travel.jpg" alt="Long-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <img src="/BagChk2.0/travel.jpg" alt="Long-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold mb-3">Long-Term Storage</h3>
                     <p class="text-[var(--text-light)]">Ideal for travelers needing storage for days or weeks. Our secure facilities keep your luggage safe for as long as you need.</p>
                 </div>
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/bagchk/business.jpg" alt="Business Solutions" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <img src="/BagChk2.0/business.jpg" alt="Business Solutions" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold mb-3">Business Solutions</h3>
                     <p class="text-[var(--text-light)]">Tailored storage for business travelers. Store briefcases, equipment, or event materials with our flexible options.</p>
                 </div>
@@ -255,9 +255,9 @@
         </div>
     </section>
 
-    <!-- Why Choose Bagchk -->
+    <!-- Why Choose BagChk2.0 -->
     <div class="mt-8 sm:mt-12 text-center">
-        <h3 class="text-xl sm:text-2xl font-semibold mb-4">Why Choose Bagchk?</h3>
+        <h3 class="text-xl sm:text-2xl font-semibold mb-4">Why Choose BagChk2.0?</h3>
         <ul class="text-[var(--text-light)] space-y-2 max-w-2xl mx-auto">
             <li>🔒 Partnered with vetted local businesses for secure storage locations</li>
             <li>🧳 Bags stored in secure areas, monitored by staff</li>
@@ -278,7 +278,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 sm:gap-8">
                 <div>
                     <h3 class="text-lg sm:text-xl font-semibold mb-4">Contact Information</h3>
-                    <p class="text-[var(--text-light)] mb-2">Email: support@bagchk.com</p>
+                    <p class="text-[var(--text-light)] mb-2">Email: support@BagChk2.0.com</p>
                     <p class="text-[var(--text-light)] mb-2">Phone: (312) 555-1234</p>
                     <p class="text-[var(--text-light)]">Address: 123 N Michigan Ave, Chicago, IL 60601</p>
                 </div>
@@ -300,7 +300,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div>
-                    <h3 class="text-base sm:text-lg font-semibold mb-4">Bagchk</h3>
+                    <h3 class="text-base sm:text-lg font-semibold mb-4">BagChk2.0</h3>
                     <p class="text-[var(--text-light)]">Secure luggage storage in Chicago. Just Hand It To Us.</p>
                 </div>
                 <div>
@@ -320,7 +320,7 @@
                     </div>
                 </div>
             </div>
-            <p class="text-center text-[var(--text-light)] mt-6 sm:mt-8">© 2025 Bagchk. All rights reserved.</p>
+            <p class="text-center text-[var(--text-light)] mt-6 sm:mt-8">© 2025 BagChk2.0. All rights reserved.</p>
         </div>
     </footer>
 
