--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <a href="#home">
-                                        <a href="index.html"><img src="/BagChk2.0/logo.jpg" alt="BagChk2.0 Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
+                                        <a href="index.html"><img src="/BagChk2.0/photos/logo.jpg" alt="BagChk2.0 Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
 
 <!--                     <img src="/BagChk2.0/logo.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     </a> -->
