--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <a href="#home">
-                                        <a href="index.html"><img src="/BagChk2.0/photos/logo.jpg" alt="BagChk2.0 Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
+                                        <a href="index.html"><img src="/BagChk2.0/images/logo.jpg" alt="BagChk2.0 Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
 
 <!--                     <img src="/BagChk2.0/logo.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     </a> -->
@@ -237,17 +237,17 @@
             <!-- Service Options -->
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/BagChk2.0/sports.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <img src="/BagChk2.0/images/sports.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold mb-3">Short-Term Storage</h3>
                     <p class="text-[var(--text-light)]">Perfect for a few hours of sightseeing. Drop off your bags at any of our downtown Chicago locations and enjoy the city hassle-free.</p>
                 </div>
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/BagChk2.0/travel.jpg" alt="Long-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <img src="/BagChk2.0/images/travel.jpg" alt="Long-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold mb-3">Long-Term Storage</h3>
                     <p class="text-[var(--text-light)]">Ideal for travelers needing storage for days or weeks. Our secure facilities keep your luggage safe for as long as you need.</p>
                 </div>
                 <div class="bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg animate-card">
-                    <img src="/BagChk2.0/business.jpg" alt="Business Solutions" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
+                    <img src="/BagChk2.0/images/business.jpg" alt="Business Solutions" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
                     <h3 class="text-lg sm:text-xl font-semibold mb-3">Business Solutions</h3>
                     <p class="text-[var(--text-light)]">Tailored storage for business travelers. Store briefcases, equipment, or event materials with our flexible options.</p>
                 </div>
