--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
 
         [data-theme="dark"] .hero-image {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/background.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/images/background.jpg');
         }
 
         h1, h2, h3 {
