--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         .hero-image {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/background.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/images/background.jpg');
             background-size: cover;
             background-position: center;
         }
