--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         });
 
         // Load saved theme
-        const savedTheme = localStorage.getItem('theme') || 'light';
+        const savedTheme = localStorage.getItem('theme') || 'dark';
         html.setAttribute('data-theme', savedTheme);
     </script>
 </body>
