--- a/booking.html
+++ b/booking.html
@@ -881,22 +881,23 @@
         // };
         // setInterval(rotateCarousel, 5000);
         // items.forEach((item, i) => item.setAttribute('aria-hidden', i === 0 ? 'false' : 'true'));
-  // Carousel
+ // Carousel
         const items = $$('.carousel-item');
         let idx = 0;
         const rotateCarousel = () => {
             items[idx].classList.remove('active');
-            items[idx].setAttribute('aria-hidden', 'true');
+            items[idx].setAttribute('aria-selected', 'false');
             idx = (idx + 1) % items.length;
             items[idx].classList.add('active');
-            items[idx].setAttribute('aria-hidden', 'false');
-        };
+            items[idx].setAttribute('aria-selected', 'true');
+        }
         items[0].classList.add('active'); // Ensure first item is visible immediately
-        items[0].setAttribute('aria-hidden', 'false');
-        items.forEach((item, i) => {
-            if (i !== 0) item.setAttribute('aria-hidden', 'true');
+        items[0].setAttribute('aria-selected', 'true');
+        items.forEach((item, index) => {
+            if (index !== 0) item.setAttribute('aria-hidden', 'true');
+            else item.setAttribute('aria-hidden', 'false');
         });
-        setTimeout(() => setInterval(rotateCarousel, 5000), 5000); // Delay first rotation
+        setTimeout(() => setInterval(() => rotateCarousel(), 5000), 5000); // Delay first rotation
 
         // Map Setup
         const map = L.map('map', { zoomControl: true, scrollWheelZoom: false, zoom: innerWidth <= 640 ? 10 : 13 })
