--- a/booking.html
+++ b/booking.html
@@ -540,16 +540,24 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
                                 </svg>
                                 <div class="form-group required">
-    <label for="bag-description">Describe Your Bags</label>
-    <textarea id="bag-description" class="w-full" placeholder="e.g., 2 suitcases and a duffle bag, all black" aria-describedby="bag-description-hint" required></textarea>
-    <span class="helper-text" id="bag-description-hint">Please describe your baggage (type, size, appearance)</span>
-    <svg class="valid-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" width="16" height="16">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-    </svg>
-    <div id="bag-description-error" class="error-message" role="alert"></div>
+<div class="form-group required">
+  <label for="bag-description">Describe Your Bags</label>
+  <textarea
+    id="bag-description"
+    class="w-full"
+    placeholder="e.g., 2 suitcases and a duffle bag, all black"
+    aria-describedby="bag-description-hint"
+    required
+  ></textarea>
+  <span class="helper-text" id="bag-description-hint">
+    Please describe your baggage (type, size, appearance)
+  </span>
+  <svg class="valid-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" width="16" height="16">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+  </svg>
+  <div id="bag-description-error" class="error-message" role="alert"></div>
 </div>
-
-                                <div id="bag-count-error" class="error-message" role="alert"></div>
+                        <div id="bag-count-error" class="error-message" role="alert"></div>
                                 
                             </div>
                             <div class="form-group required">
