--- a/booking.html
+++ b/booking.html
@@ -909,6 +909,18 @@
         // };
         // setInterval(rotateCarousel, 5000);
         // items.forEach((item, i) => item.setAttribute('aria-hidden', i === 0 ? 'false' : 'true'));
+        const rotateCarousel = () => {
+    items[idx].classList.remove('active');
+    items[idx].setAttribute('aria-hidden', 'true');
+
+    idx = (idx + 1) % items.length;
+
+    items[idx].classList.add('active');
+    items[idx].setAttribute('aria-hidden', 'false');
+};
+
+setInterval(rotateCarousel, 5000);
+
  // Carousel
         const items = $$('.carousel-item');
         let idx = 0;
