--- a/booking.html
+++ b/booking.html
@@ -402,7 +402,7 @@
     <nav>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
-                <a href="index.html" aria-label="Bagchk Home"><img src="/Bagchk2/images/logo.jpg" alt="Bagchk Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
+                <a href="index.html" aria-label="Bagchk Home"><img src="/BagChk2.0/images/logo.jpg" alt="Bagchk Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
                 <div class="flex items-center gap-3">
                     <button class="theme-toggle" aria-label="Toggle dark mode">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -424,8 +424,8 @@
         <div class="booking-container">
             <div class="carousel-container" role="region" aria-label="Promotional images carousel">
                 <div class="carousel-item active" style=" Easter Egg! You're a curious one, aren't you? 🕵️‍♂️ Here's a fun fact: Chicago's nickname 'The Windy City' isn't just about the weather—it's also a nod to its long-winded politicians! Keep exploring, and maybe you'll find more hidden gems! 😎"></div>
-                <div class="carousel-item" style="background-image: url('/Bagchk2/images/sports.jpg')"></div>
-                <div class="carousel-item" style="background-image: url('/Bagchk2/images/mpark.jpg')"></div>
+                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/sports.jpg')"></div>
+                <div class="carousel-item" style="background-image: url('/BagChk2.0/images/mpark.jpg')"></div>
             </div>
  
             <h1 class="text-center mb-4">Secure Your Storage in Just a Minute!</h1>
