--- a/booking.html
+++ b/booking.html
@@ -1362,4 +1362,4 @@
         });
     </script>
 </body>
-</html>
+</html>   fix qr receipt and summary to be much more streamlined and easy to use and see
