--- a/booking.html
+++ b/booking.html
@@ -411,11 +411,11 @@
                     </button>
                     <button class="hamburger" aria-label="Toggle navigation menu" role="button"><div></div><div></div><div></div></button>
                 </div>
-                <div class="nav-links flex items-center gap-3 sm:gap-5 lg:gap-6">
+                     <div class="nav-links flex items-center gap-3 sm:gap-5 lg:gap-6">
                     <a href="index.html#home" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
                     <a href="index.html#services" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
                     <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
-                    <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
+                    <a href="booking.html#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
                 </div>
             </div>
         </div>
